# shape-recognition-bot

./: README.md  guess_fig.py  main.py  pyproject.toml  train_model.ipynb
models/: shapes_real_cnn.h5  shapes_real_cnn.keras
